--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^9.0.11",
     "prettier": "^3.3.2",
+    "sass": "^1.77.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
-
 }
