feat: add deploy config

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://sarafashka.github.io/cryptocoin-list/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "deploy" : "gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint --ext ts,tsx --fix src",
     "preview": "vite preview",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-compiler": "^0.0.0-experimental-0998c1e-20240625",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "husky": "^9.0.11",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
