--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,13 +15,15 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "esModuleInterop": true,
     "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
+    
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src",  "./jest.setup.ts"]
+  "include": ["./src/**/*.ts"]
 }
