feat: add ThemeProvider with Context Api

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,5 +25,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src/**/*.ts", "src/api/api.tsx"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
