--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transformer-svg": "^2.0.2",
+    "msw": "^2.3.4",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
     "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "whatwg-fetch": "^3.6.20"
   }
 }
