--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-transformer-svg": "^2.0.2",
     "msw": "^2.3.4",
+    "next-router-mock": "^0.9.13",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
     "ts-jest": "^29.2.2",
